--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html ng-app='orderSystem'>
+<html>
 
 <head>
   <title>{{title}}</title>
-  {{!-- <link rel="stylesheet" href="/stylesheets/font-awesome.min.css"> --}}
+  {{!--
+  <link rel="stylesheet" href="/stylesheets/font-awesome.min.css"> --}}
   <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="/stylesheets/simditor.css">
 </head>
 
-<body>
+<body ng-app='orderSystem'>
 
   <header>
+
+
+
     <div class="container">
       <div class="row">
         <div class="col-md-4">
@@ -26,31 +30,52 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-              </button> {{!-- <a class="navbar-brand" href="#">世和基因</a> --}}
+              </button> {{!--
+              <a class="navbar-brand" href="#">世和基因</a> --}}
             </div>
 
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
               <ul class="nav navbar-nav">
-                <li><a href="#!/">首页</a></li>
-                <li><a href="#!/serviceInfo">服务介绍</a></li>
-                <li><a href="#!/serviceList">测序服务</a></li>
+                <li>
+                  <a href="#!/">首页</a>
+                </li>
+                <li>
+                  <a href="#!/serviceInfo">服务介绍</a>
+                </li>
+                <li>
+                  <a href="#!/serviceList">测序服务</a>
+                </li>
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown">
-                  <a href="" class="dropdown-toggle" data-toggle="dropdown">用户名:$window.sessionStorage.token<b class="caret"></b></a>
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown">用户名:$window.sessionStorage.token
+                    <b class="caret"></b>
+                  </a>
                   <ul class="dropdown-menu">
-                    <li><a href="#!/users/baseInfo">基本信息设置</a></li>
-                    <li><a href="#!/users/institution">机构管理</a></li>
-                    <li><a href="#!/users/address">地址管理</a></li>
+                    <li>
+                      <a href="#!/users/baseInfo">基本信息设置</a>
+                    </li>
+                    <li>
+                      <a href="#!/users/institution">机构管理</a>
+                    </li>
+                    <li>
+                      <a href="#!/users/address">地址管理</a>
+                    </li>
                     <li class="li-dividing"></li>
-                    <li><a href="#!/orders/myorders">送样信息表管理</a></li>
+                    <li>
+                      <a href="#!/orders/myorders">送样信息表管理</a>
+                    </li>
                     <li class="li-dividing"></li>
-                    <li><a href="#!/users/password">修改密码</a></li>
-                    <li><a href="javascripts:;" ng-click='logout()'>退出登录</a></li>
+                    <li>
+                      <a href="#!/users/password">修改密码</a>
+                    </li>
+                    <li>
+                      <a href="javascripts:;" ng-click='logout()'>退出登录</a>
+                    </li>
                   </ul>
                 </li>
               </ul>
@@ -77,11 +102,8 @@
   </header>
 
 
-  {{!-- <div class="container content"> --}}
-
-    {{{body}}}
-
-  {{!-- </div> --}}
+  {{!--
+  <div class="container content"> --}} {{{body}}} {{!-- </div> --}}
 
 
 
@@ -102,16 +124,17 @@
   <script src="/javascripts/static/hotkeys.js"></script>
   <script src="/javascripts/static/uploader.js"></script>
   <script src="/javascripts/static/simditor.js"></script>
-  
+  <script src="/javascripts/static/md5.min.js"></script>
+
   <script src="/javascripts/route.js"></script>
   <script src="/javascripts/controllers/indexCtrl.js"></script>
   <script src="/javascripts/controllers/baseInfoCtrl.js"></script>
   <script src="/javascripts/controllers/institutionCtrl.js"></script>
   <script src="/javascripts/controllers/addressCtrl.js"></script>
-  <script src="/javascripts/controllers/orderDetailCtrl.js"></script>  
-        
+  <script src="/javascripts/controllers/orderDetailCtrl.js"></script>
+
   <script src="/javascripts/services/auth.js"></script>
-  
+
 
 
 
