--- a/views/users/addressDetail.hbs
+++ b/views/users/addressDetail.hbs
@@ -1,124 +1,148 @@
-<div class="pub-bgcolor">
-    <div class="container">
-
-        <h3>地址管理</h3>
-        <div class="panel panel-success">
-            <div class="panel-heading">
-                <span class="panel-title">新增地址</span>
+{{!-- <div ng-controller="addressCtrl"> --}}
+    <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">提示信息：</h4>
+                </div>
+                <div class="modal-body">
+                    <p>[[message]]</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="closeModal()">确定</button>
+                </div>
             </div>
-            <div class="panel-body">
-
-                <form novalidate role="form">
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-1 text-right">
-                                <label for="">国家</label>
-                            </div>
-                            <div class="col-md-8">
-                                <input type="text" class="form-control" ng-model='addressDetail.country' name="country" disabled />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-1 text-right">
-                                <label for="">省份</label>
-                            </div>
-                            <div class="col-md-8">
-                                <select id="province" class="form-control" name="province" ng-change="changeProvince()">
-                                    <option value="[[x]]" ng-repeat="x in addressDetail.province">[[x]]</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-1 text-right">
-                                <label for="">城市</label>
-                            </div>
-                            <div class="col-md-8">
-                                <select id="city" class="form-control" ng-model='addressDetail.city' name="city">
-                                    <option value=""></option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-1 text-right">
-                                <label for="">县/区</label>
-                            </div>
-                            <div class="col-md-8">
-                                <select id="district" class="form-control" ng-model='addressDetail.district' name="district">
-                                    <option value="">请选择区/县</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-1 text-right">
-                                <label for="">详细住址</label>
-                            </div>
-                            <div class="col-md-8">
-                                <input type="text" class="form-control" ng-model='addressDetail.detailedAddress' name="detailedAddress" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-1 text-right">
-                                <label for="">邮编</label>
-                            </div>
-                            <div class="col-md-8">
-                                <input type="text" class="form-control" ng-model='addressDetail.ZipCode' name="ZipCode" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-1 text-right">
-                                <label for="">联系人</label>
-                            </div>
-                            <div class="col-md-8">
-                                <input type="text" class="form-control" ng-model='addressDetail.contactPerson' name="contactPerson" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-2 col-md-offset-1 text-right">
-                                <label for="">联系电话</label>
-                            </div>
-                            <div class="col-md-8">
-                                <input type="text" class="form-control" ng-model='addressDetail.contactTel' name="contactTel" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="text-center">
-
-                        <button type="button" class="btn btn-primary center" ng-click="addressSave()">保存</button>
-
-                        <button type="button" class="btn btn-primary center" ng-click="addressCancel()">取消</button>
-
-                    </div>
-
-                </form>
-            </div>
+            <!-- /.modal-content -->
         </div>
-
-
-
+        <!-- /.modal-dialog -->
     </div>
-</div>
+    <!-- /.modal -->
+
+    <div class="pub-bgcolor">
+        <div class="container">
+
+            <h3>地址管理</h3>
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <span class="panel-title">新增地址</span>
+                </div>
+                <div class="panel-body">
+
+                    <div novalidate role="form">
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-2 col-md-offset-1 text-right">
+                                    <label for="">国家</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control" ng-model='addressDetail.country' name="country" disabled />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-2 col-md-offset-1 text-right">
+                                    <label for="">省份</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <select id="province" class="form-control" name="province" ng-model="addressDetail.province" ng-options='act for act in province'
+                                        ng-change="changeCity()">
+                                        <option value="">-- 请选择省份 --</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-2 col-md-offset-1 text-right">
+                                    <label for="">城市</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <select id="city" class="form-control" name="city" ng-model="addressDetail.city" ng-options='act for act in city' ng-change="changeDistrict()">
+                                        <option value="">-- 请选择城市 --</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-2 col-md-offset-1 text-right">
+                                    <label for="">县/区</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <select id="district" class="form-control" name="district" ng-model="addressDetail.district" ng-options='act for act in district'>
+                                        <option value="">-- 请选择区/县 --</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-2 col-md-offset-1 text-right">
+                                    <label for="">详细住址</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control" ng-model='addressDetail.detailedAddress' name="detailedAddress" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-2 col-md-offset-1 text-right">
+                                    <label for="">邮编</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control" ng-model='addressDetail.ZipCode' name="ZipCode" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-2 col-md-offset-1 text-right">
+                                    <label for="">联系人</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control" ng-model='addressDetail.contactPerson' name="contactPerson" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-2 col-md-offset-1 text-right">
+                                    <label for="">联系电话</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control" ng-model='addressDetail.contactTel' name="contactTel" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="text-center">
+
+                            <button type="button" class="btn btn-primary center" ng-click="addressSave()">保存</button>
+
+                            <button type="button" class="btn btn-primary center" ng-click="addressCancel()">取消</button>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+
+{{!-- </div> --}}
