1113分页显示没有完成

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,7 +35,9 @@
   <script src="/javascripts/controllers/indexCtrl.js"></script>
   <script src="/javascripts/controllers/baseInfoCtrl.js"></script>
   <script src="/javascripts/controllers/institutionCtrl.js"></script>
+  <script src="/javascripts/controllers/institutionDetailCtrl.js"></script>  
   <script src="/javascripts/controllers/addressCtrl.js"></script>
+  <script src="/javascripts/controllers/addressDetailCtrl.js"></script>  
   <script src="/javascripts/controllers/orderDetailCtrl.js"></script>
 
   <script src="/javascripts/services/auth.js"></script>
