--- a/views/users/addressDetail.hbs
+++ b/views/users/addressDetail.hbs
@@ -31,7 +31,7 @@
                 </div>
                 <div class="panel-body">
 
-                    <div novalidate role="form">
+                    <form novalidate role="form">
 
                         <div class="form-group">
                             <div class="row">
@@ -130,13 +130,13 @@
 
                         <div class="text-center">
 
-                            <button type="button" class="btn btn-primary center" ng-click="addressSave()">保存</button>
+                            <input type="button" class="btn btn-primary center" ng-click="addressSave()" value="保存"/>
 
-                            <button type="button" class="btn btn-primary center" ng-click="addressCancel()">取消</button>
+                            <input type="button" class="btn btn-primary center" ng-click="addressCancel()" value="取消"/>
 
                         </div>
 
-                    </div>
+                    </form>
                 </div>
             </div>
 
