--- a/views/users/institutionDetail.hbs
+++ b/views/users/institutionDetail.hbs
@@ -1,3 +1,26 @@
+{{!-- <div ng-controller="addressCtrl"> --}}
+    <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">提示信息：</h4>
+                </div>
+                <div class="modal-body">
+                    <p>[[message]]</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="closeModal()">确定</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
 <div class="pub-bgcolor">
     <div class="container">
 
@@ -89,9 +112,9 @@
 
                     <div class="text-center">
 
-                        <button type="button" class="btn btn-primary center" ng-click="institutionSave()" >保存</button>
+                        <input type="button" class="btn btn-primary center" ng-click="institutionSave()" value="保存"/>
 
-                        <button type="button" class="btn btn-primary center" ng-click="institutionCancel()" >取消</button>
+                        <input type="button" class="btn btn-primary center" ng-click="institutionCancel()" value="取消"/>
 
                     </div>
 
